--- a/bspwm/polybar/config.ini
+++ b/bspwm/polybar/config.ini
@@ -11,8 +11,9 @@ font-1 = "Iosevka Nerd Font:pixelsize=13;3"
 enable-ipc = true
 modules-left = menu bspwm
 modules-right = volume backlight network date powermenu
-background = #0B0D10
+background = #2C5364
 foreground = #c0caf5
+radius = 15px
 
 [bar/bottom]
 width = 100%
@@ -25,8 +26,9 @@ font-1 = "Iosevka Nerd Font:pixelsize=13;3"
 enable-ipc = true
 modules-left = cpu
 modules-right = memory
-background = #171a1f
+background = #2C5364
 foreground = #FFF
+radius = 15
 
 [module/bspwm]
 type = internal/bspwm
